--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "lite-server",
-    "go": "tsc app.ts && node app.js"
+    "go": "tsc && node ./dist/app.js"
   },
   "keywords": [],
   "author": "",
