--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     // "sourceMap": true,                           /* Generates corresponding '.map' file. */
     "outFile": "./dist/main/bundle.js",                             /* Concatenate and emit output to single file. */
     "outDir": "./dist",                                 /* Redirect output structure to the directory. */
-    "rootDir": "./src",                                /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "rootDir": "./src/main",                                /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                           /* Enable project compilation */
     // "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
     // "removeComments": true,                      /* Do not emit comments to output. */
@@ -69,8 +69,11 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
+  "include": [
+    "./src/main"
+  ],
   "exclude": [
-    "basics",
+    "./src/basics",
     "node_modules" // this is deafult, no need to declare actualy
   ]
 } 
